--- a/les12.html
+++ b/les12.html
@@ -8,34 +8,34 @@
 <body>
 <header></header>
 <table>
-<th id="red">Fiets</th>
-<th id="blue">Quad</th>
-<th id="yellow">Scooter</th>
-<th id="purple">Auto</th>
+<th class="red">Fiets</th>
+<th class="blue">Quad</th>
+<th class="yellow">Scooter</th>
+<th class="purple">Auto</th>
 </tr>
 <tr>
-<td id="blue">eenwieler</td>
-<td id="red"><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
-<td id="purple">schoenen</td>
-<td id="yellow"><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
+<td class="blue">eenwieler</td>
+<td><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
+<td class="purple">schoenen</td>
+<td><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
 </tr>
 <tr>
-<td id="yellow">tweewieler</td>
-<td id="blue"><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
-<td id="red">handschoenen</td>
-<td id="purple"><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
+<td class="yellow">tweewieler</td>
+<td><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
+<td class="red">handschoenen</td>
+<td><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
 </tr>
 <tr>
-<td id="red">driewieler</td>
-<td id="purple"><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
-<td id="yellow">bril</td>
-<td id="blue"><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
+<td class="red">driewieler</td>
+<td><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
+<td class="yellow">bril</td>
+<td><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
 </tr>
 <tr>
-<td id="purple">vierwieler</td>
-<td id="red"><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
-<td id="blue">helm</td>
-<td id="yellow"><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
+<td class="purple">vierwieler</td>
+<td><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
+<td class="blue">helm</td>
+<td><a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a></td>
 </tr>
 </table>
 <footer></footer>
